게시판 유형 작업
